# esd-citations-matching

./: .gitignore  readme.md
cases-worker/: Cargo.toml  esd-citations-rust.code-workspace  readme.md  test_data.txt
cases-worker/src/: app_init.rs  csv_source.rs  initialize.rs  main.rs  process.rs
cases-worker/src/common/: csv_writer.rs  document.rs  logger.rs  mod.rs  progress_bar.rs  regex.rs  util.rs
cases-worker/src/lib/: benchmark.rs  db.rs  document.rs  error.rs  logger.rs  mod.rs  regex.rs  util.rs
cases-worker/src/rules/: code_rules.rs  ecli_code.rs  example_rule.rs  full_code.rs  full_name.rs  mod.rs  num_code_w_ctw.rs  num_code_w_key.rs  rules.rs  short_name.rs  t_code_w_ctx.rs
db/: db.sqlite
docs/: rules.md
esd-cases-fetcher/: 04-14-test.csv  clear_matches.py  db.py  esd-citations-python.code-workspace  esd_scraped_data_saver.py  main.py  parse_csv_data.py  parse_csv_metadata_old.py  readme.md  save_esd_scraped_data.py  save_scraped_data.py  scrape.py  source_cases_data_saver.py  update_shortnames.py  util.py
esd-cases-fetcher/csv_source/: 04-14.csv  15-18.csv  52-82.csv  83-03.csv  SDEU-usneseni-52-18.csv
esd-cases-fetcher/csv_test_source/: 04-14-test.csv
queries/: README.md  count_matched_cases.sql  count_matched_source_cases.sql  count_matched_source_cases_per_year.sql  count_matched_unique_source_cases_per_year.sql  count_matches_per_esd_case.sql  count_matches_per_year.sql  count_source_cases_w_match.sql  distance_between_citation_and_publ_per_match.sql  esd_cases_joined.sql  esd_cases_w_infos.sql  get_all_esd_codes.sql
(+6 files in other folders)
