[package]
name = "cases-worker"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.14"
simplelog = "0.11.1"
lazy_static = "1.4.0"
rusqlite = "0.26.3"
itertools = "0.10.3"
indicatif = "0.16.2"
