[package]
name = "cases-worker"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
default = ["allrules"]
allrules = []

[dependencies]
log = "0.4.14"
simplelog = "0.11.1"
lazy_static = "1.4.0"
rusqlite = "0.26.3"
itertools = "0.10.3"
indicatif = {version = "0.16.2", features = ["rayon"]}
chrono = "0.4.19"
regex = "1.5.4"
rayon = "1.5.1"
unidecode = "0.3.0"

